@@ -75,14 +75,12 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
     private Properties annotationRecordProperties;
 
     private DateTimeFormatter dateTimeFormatter;
-    private DateTimeFormatter dateFormatter;
 
 
     @Override
     public AnnotationArchiveRecord mapToAnnotationArchiveRecord(ExternalObjectDirectoryEntity externalObjectDirectory,
                                                                 String rawFilename) {
         dateTimeFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateTimeFormat());
-        dateFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateFormat());
 
         try {
             loadAnnotationProperties();
@@ -227,7 +225,7 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
     private String getHearingDate(AnnotationDocumentEntity annotationDocument) {
         String hearingDate = null;
         if (CollectionUtils.isNotEmpty(annotationDocument.getAnnotation().getHearingList())) {
-            hearingDate = OffsetDateTime.of(annotationDocument.getAnnotation().getHearingList().get(0).getHearingDate().atTime(0, 0, 0),
+            hearingDate = OffsetDateTime.of(annotationDocument.getAnnotation().getHearingList().getFirst().getHearingDate().atTime(0, 0, 0),
                                             ZoneOffset.UTC).format(dateTimeFormatter);
         }
         return hearingDate;
@@ -259,7 +257,7 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
     private static String getCourtroom(AnnotationDocumentEntity annotationDocument) {
         String courtroom = null;
         if (CollectionUtils.isNotEmpty(annotationDocument.getAnnotation().getHearingList())) {
-            courtroom = annotationDocument.getAnnotation().getHearingList().get(0).getCourtroom().getName();
+            courtroom = annotationDocument.getAnnotation().getHearingList().getFirst().getCourtroom().getName();
         }
         return courtroom;
     }
